@@ -672,5 +672,6 @@ Spring 4.3 also improves the caching abstraction as follows:
 === Testing Improvements
 
 * The JUnit support in the _Spring TestContext Framework_ now requires JUnit 4.12 or higher.
-* Client-side Spring MVC Test supports expectations for form data in the request body.
 * Server-side Spring MVC Test supports expectations on response headers with multiple values.
+* Server-side Spring MVC Test parses form data request content and populates request parameters.
+* Client-side Spring MVC Test supports expectations for form data in the request body.
